--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,96 @@
+html {
+  height: 100%;
+}
 body {
   font-family: 'Merriweather', serif;
   text-align: center;
+  background-color: #fefdca;
+  height: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-rows: 10% 10% 30% 40% 10%;
+  grid-template-columns: 10% 10% 60% 10% 10%;
 }
 h1 {
   font-family: 'Sacramento', cursive;
+  font-weight: bold;
+  font-size: 5.625rem;
+  /* color: #FEFDCA; */
 }
 h2 {
   font-family: 'Montserrat', sans-serif;
+  /* color: #FEFDCA; */
+  font-size: 2.5rem;
+}
+.header-container {
+  /* background-color: #94B49F; */
+  margin: 1% auto;
+  width: 100%;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 2;
+  grid-column-end: 5;
+}
+
+.body-container {
+  /* background-color: #FCF8E8; */
+  /* margin: 1% auto; */
+  grid-row-start: 2;
+  grid-row-end: 5;
+  grid-column-start: 2;
+  grid-column-end: 5;
+  position: relative;
+}
+.bottom-mountain {
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+
+.bottom-container {
+  /* background-color: #94B49F; */
+  grid-row-start: 5;
+  grid-column-start: 2;
+  grid-column-end: 5;
+}
+
+.communication {
+  width: 15%;
+  margin: auto;
+}
+.footer-link {
+  font-size: 2rem;
+  color: #5a8f7b;
+  margin: 5%;
+}
+.footer-link:hover {
+  color: #0f3d3e;
+}
+.nav-link {
+  font-size: 2rem;
+  color: #5a8f7b;
+}
+.nav-link:hover {
+  color: #0f3d3e;
+}
+.nav-item {
+  margin: auto 10%;
+}
+.navbar {
+}
+.card-container {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  margin: auto;
+}
+.card {
+  margin: 5% auto;
+  width: 60%;
+}
+
+.card-title {
+  font-weight: bold;
+}
+.card-text {
+  font-weight: bold;
 }
